--- a/ok/index.html
+++ b/ok/index.html
@@ -21,7 +21,8 @@
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/css/x.58badcbb49ee.css" rel="stylesheet"/>
 <meta content="랜딩 페이지 | 이동 안내 | 88ST" property="og:title"/><meta content="클릭 한 번으로 이동하는 88ST 랜딩 페이지입니다." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/ok/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
-<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/><link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/><link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v90.typography.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v91.designsystem.20260219.css" rel="stylesheet"/>
+<link rel="stylesheet" href="/assets/css/patch.v92.cards_tools_headers.20260219.css"/>
 <script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
