--- a/tool-virtual/index.html
+++ b/tool-virtual/index.html
@@ -278,7 +278,8 @@
 <link href="/assets/vvip-pro.v71.css?v=71" rel="stylesheet"/>
 <script defer="" src="/assets/js/vvip-pro.v71.js?v=71"></script>
 <script defer="" src="/assets/js/vvip-brief.v71.js?v=71"></script>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v90.typography.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v91.designsystem.20260219.css" rel="stylesheet"/>
+<link rel="stylesheet" href="/assets/css/patch.v92.cards_tools_headers.20260219.css"/>
 <script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body>
