--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
   ]
 }
 </script>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v90.typography.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v91.designsystem.20260219.css" rel="stylesheet"/>
+<link rel="stylesheet" href="/assets/css/patch.v92.cards_tools_headers.20260219.css"/>
 <script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 <script defer="" src="/assets/js/j.searchtyping.v83.20260219.js"></script>
 </head>
