--- a/tool-casino/index.html
+++ b/tool-casino/index.html
@@ -46,7 +46,8 @@
 <meta content="/img/logo.png" property="og:image"/><link href="/assets/vvip-pro.v71.css?v=71" rel="stylesheet"/>
 <script defer="" src="/assets/js/vvip-pro.v71.js?v=71"></script>
 <script defer="" src="/assets/js/vvip-brief.v71.js?v=71"></script>
-<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/>
+<link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/><link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v90.typography.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v91.designsystem.20260219.css" rel="stylesheet"/>
+<link rel="stylesheet" href="/assets/css/patch.v92.cards_tools_headers.20260219.css"/>
 <script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
 </head>
 <body class="st-app">
