--- a/calc/index.html
+++ b/calc/index.html
@@ -21,10 +21,9 @@
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <meta content="#0b0c10" name="theme-color"/>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v90.typography.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v91.designsystem.20260219.css" rel="stylesheet"/>
-<link rel="stylesheet" href="/assets/css/patch.v92.cards_tools_headers.20260219.css"/>
-<link href="/assets/css/vvip-hub.v85.css?v=85" rel="stylesheet"/>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/vvip-hub.v85.css?v=85" rel="stylesheet"/>
 <script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
 </head>
 <body>
 <div id="shell"></div>
