--- a/casino/landing-a_index.html
+++ b/casino/landing-a_index.html
@@ -44,9 +44,8 @@
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
 <meta content="입플·보너스·페이백 분석기 | 88ST" property="og:title"/><meta content="입플/보너스/페이백 조건과 체크리스트, 계산기 링크를 한 곳에서 확인하세요." property="og:description"/><meta content="website" property="og:type"/><meta content="https://88st.cloud/landing-a/" property="og:url"/><meta content="/img/logo.png" property="og:image"/>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v90.typography.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v91.designsystem.20260219.css" rel="stylesheet"/>
-<link rel="stylesheet" href="/assets/css/patch.v92.cards_tools_headers.20260219.css"/>
-<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
 </head>
 <body>
 <div class="wrap">
