--- a/fortune/index.html
+++ b/fortune/index.html
@@ -56,9 +56,8 @@
     .fortune-kpi .v{margin-top:6px;font-size:14px;font-weight:950;line-height:1.5;color:rgba(255,255,255,.95)}
     .fortune-mini{font-size:12px;color:rgba(255,255,255,.72);line-height:1.55;margin-top:10px}
   </style>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/patch.v88.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v89.components.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v90.typography.20260219.css" rel="stylesheet"/><link href="/assets/css/patch.v91.designsystem.20260219.css" rel="stylesheet"/>
-<link rel="stylesheet" href="/assets/css/patch.v92.cards_tools_headers.20260219.css"/>
-<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
+<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
 </head>
 <body>
 <h1 style="position:absolute;left:-9999px;">오늘의 운 브리핑 | 별자리·연애·신년운세</h1>
