--- a/calc/index.html
+++ b/calc/index.html
@@ -16,24 +16,105 @@
 <meta content="스포츠·카지노·슬롯·미니게임 분석 도구 모음. EV/마진/배당/켈리/슈 트래커/슬롯 환수율 DB." name="description"/><meta content="스포츠 계산기, 배당 계산, 조합 배당, 단폴/조합, 베팅 계산기, 수익 계산, 88ST" name="keywords"/>
 <link href="https://88st.cloud/calc/" rel="canonical"/>
 <link href="/assets/css/x.e28fb3ebcc4c.css" rel="stylesheet"/>
-<script defer="" src="/assets/js/j.9179477b9417.js"></script>
 <link href="/assets/c.9995eeb5cf82.css" rel="stylesheet"/>
 <link href="/assets/c.0b3d8a45f8c9.css" rel="stylesheet"/>
 <link href="/assets/c.a50dd3bc5b33.css" rel="stylesheet"/>
 <meta content="#0b0c10" name="theme-color"/>
-<link href="/assets/css/vvip-luxe.v75.css?v=77" rel="stylesheet"/><link href="/assets/css/vvip-hub.v85.css?v=85" rel="stylesheet"/>
-<script defer="" src="/assets/js/vvip-global.v75.js?v=77"></script>
-<link rel="stylesheet" href="/assets/css/patch.v94.productui.20260219.min.css"/>
+<script defer="" src="/assets/js/build.ver.js?v=v20260224-1845"></script>
+<script defer="" src="/assets/js/build.loader.js?v=v20260224-1845"></script>
+
+<link rel="stylesheet" href="/assets/css/hdr.shell.v1.20260221.css?v=119"/>
 </head>
 <body>
+<div id="_88stShellHeader" class="header header--shell" role="banner">
+  <div class="hdrShell">
+    <a class="hdrBrand" href="/" aria-label="홈으로 이동">
+      <img class="hdrLogo" src="/img/logo.png" alt="88ST" />
+      <span class="hdrName">88ST.Cloud</span>
+    </a>
+
+    <nav class="hdrNavDesktop" aria-label="주요 메뉴">
+      <a class="hdrLink" href="/cert/">인증사이트</a>
+      <a class="hdrLink" href="/">홈</a>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">분석기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/analysis/">스포츠 배당 분석기</a>
+          <a href="/tool-slot/">슬롯 RTP 분석기</a>
+          <a href="/tool-minigame/">미니게임 분석기</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">계산기</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/tool-margin/">마진 계산기</a>
+          <a href="/tool-ev/">EV 계산기</a>
+          <a href="/tool-odds/">배당↔확률 변환</a>
+          <a href="/tool-casino/">바카라 전략 계산기</a>
+          <a href="/logbook/">베팅 로그북</a>
+          <a href="/calc/">계산기 홈</a>
+        </div>
+      </details>
+
+      <details class="hdrDD">
+        <summary class="hdrSummary">가이드</summary>
+        <div class="hdrMenu" role="menu">
+          <a href="/guide/">가이드 홈</a>
+          <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+        </div>
+      </details>
+    </nav>
+
+    <details class="hdrNavMobile">
+      <summary class="hdrBurger" aria-label="메뉴 열기">≡</summary>
+      <div class="hdrMobileMenu" role="menu">
+        <a href="/cert/">인증사이트</a>
+        <a href="/">홈</a>
+
+        <div class="hdrMobileGroup">
+          <details>
+            <summary>분석기</summary>
+            <div class="hdrMenu">
+              <a href="/analysis/">스포츠 배당 분석기</a>
+              <a href="/tool-slot/">슬롯 RTP 분석기</a>
+              <a href="/tool-minigame/">미니게임 분석기</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>계산기</summary>
+            <div class="hdrMenu">
+              <a href="/tool-margin/">마진 계산기</a>
+              <a href="/tool-ev/">EV 계산기</a>
+              <a href="/tool-odds/">배당↔확률 변환</a>
+              <a href="/tool-casino/">바카라 전략 계산기</a>
+              <a href="/logbook/">베팅 로그북</a>
+              <a href="/calc/">계산기 홈</a>
+            </div>
+          </details>
+
+          <details>
+            <summary>가이드</summary>
+            <div class="hdrMenu">
+              <a href="/guide/">가이드 홈</a>
+              <a href="/bonus-checklist/">배팅 전 체크리스트</a>
+            </div>
+          </details>
+        </div>
+      </div>
+    </details>
+  </div>
+</div>
 <div id="shell"></div>
 <main class="st-app">
 <div class="hub">
 <section class="hub-hero">
 <div>
 <div class="hero-badge">CALC HOME</div>
-<h1>계산기 홈</h1>
-<p>도구를 찾느라 헤매지 않게, <b>분석기 5종</b> + <b>계산기</b> + <b>가이드</b>를 한 화면에 정리했습니다.</p>
+<h1>스포츠 계산기 홈</h1>
+<p>도구를 찾느라 헤매지 않게, <b>분석기</b> + <b>스포츠 계산기</b> + <b>로그북</b>를 한 화면에 정리했습니다.</p>
 </div>
 <div class="hub-actions">
 <a class="hub-btn primary" href="/analysis/">스포츠 분석기</a>
@@ -125,6 +206,10 @@
 <div class="top"><div class="hub-ic">🧠</div><div><div class="ttl">Kelly 비중</div><div class="desc">자본 대비 추천 배팅 사이징</div></div></div>
 <div class="meta"><span class="hub-pill">Sizing</span><span class="hub-go">열기 →</span></div>
 </a>
+<a class="hub-card" href="/logbook/">
+<div class="top"><div class="hub-ic">🗒️</div><div><div class="ttl">베팅 로그북</div><div class="desc">내 기록 저장 · 주간/월간 리포트</div></div></div>
+<div class="meta"><span class="hub-pill">Routine</span><span class="hub-go">열기 →</span></div>
+</a>
 <a class="hub-card" href="/guide/">
 <div class="top"><div class="hub-ic">📚</div><div><div class="ttl">가이드 모음</div><div class="desc">입플/전략/기본 룰·주의</div></div></div>
 <div class="meta"><span class="hub-pill">Guide</span><span class="hub-go">열기 →</span></div>
@@ -136,6 +221,6 @@
       </div>
 </div>
 </main>
-<script defer="" src="/assets/js/j.8829a3ccde44.js?v=85"></script>
+
 </body>
 </html>
